# Gear-DLL-Loader

./: CMakeLists.txt  README.md
api/GuiltyGear/: GG.h  GGTypes.h  g_strip.c  g_strip.h
api/Patch/: patch.c  patch.h
source/: exports.def  source.c
source/libraries/GuiltyGearBase/: GG.c  GG.h  GGTypes.h
